load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")

pybind_extension(
    name = "basic",
    srcs = ["basic.cpp"],
)

py_library(
    name = "basic_lib",
    data = [":basic"],
    imports = ["."],
)

py_test(
    name = "basic_test",
    srcs = ["basic_test.py"],
    deps = [":basic_lib"],
)
